--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -164,6 +164,15 @@ h2 {
   font-size: 30px;
   color: #1d6154;
 }
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+}
+nav ul li a:hover {
+  color: #b1663c;
+}
+
 nav ul {
   display: flex;
   align-items: center;
@@ -268,6 +277,33 @@ li:hover {
 #contact textarea {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#login {
+  width: 50%;
+  margin: auto;
+}
+#login > * {
+  text-align: center;
+}
+#login h2 {
+  margin-bottom: 20px;
+}
+#login form {
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+#login input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#login label {
+  margin: 2em 0 1em 0;
 }
 
 input[type="submit"] {
