ajout lien dans js

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -296,6 +296,13 @@ li:hover {
   flex-direction: column;
 }
 
+.password {
+    text-align: center;
+    color: black;
+    text-decoration: underline;
+}
+
+
 #login input {
   height: 50px;
   font-size: 1.2em;
