--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -324,6 +324,144 @@ input[type="submit"] {
   border-radius: 60px;
 }
 
+/*modal
+/* Style de la modale */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 5% auto;
+  padding: 0;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 630px;
+  position: relative;
+  animation: modalOpen 0.3s ease;
+}
+
+@keyframes modalOpen {
+  from { opacity: 0; transform: translateY(-50px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Header de la modale */
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  border-bottom: 1px solid #B3B3B3;
+}
+
+.modal-title {
+  font-size: 26px;
+  font-weight: 400;
+  font-family: 'Work Sans', sans-serif;
+}
+
+.close-modal {
+  font-size: 32px;
+  font-weight: 400;
+  cursor: pointer;
+  color: #000;
+  line-height: 1;
+}
+
+.close-modal:hover {
+  color: #B1663C;
+}
+
+
+.edit-btn {
+  background: transparent;
+  border: none;
+  color: #000;
+  font-family: 'Work Sans', sans-serif;
+  font-size: 14px;
+  position: absolute;
+  cursor: pointer;
+ align-items: center;
+  padding: 8px 15px;
+}
+
+.edit-btn .fas {
+  font-size: 14px;
+}
+
+.admin-mode .portfolio-header {
+  justify-content: center;
+}
+
+
+/* Corps de la modale */
+.modal-body {
+  padding: 45px 105px;
+  text-align: center;
+}
+
+/* Grille de la galerie */
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  margin-bottom: 45px;
+}
+
+.gallery-item {
+  position: relative;
+  aspect-ratio: 1;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+/* Séparateur */
+.modal-separator {
+  height: 1px;
+  background-color: #B3B3B3;
+  margin: 45px 0;
+}
+
+/* Boutons */
+.btn-primary {
+  background: #1D6154;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 60px;
+  cursor: pointer;
+  font-family: 'Syne', sans-serif;
+}
+
+.btn-secondary {
+  background: transparent;
+  color: #306685;
+  border: 1px solid #306685;
+  padding: 10px 20px;
+  border-radius: 60px;
+  cursor: pointer;
+  font-family: 'Syne', sans-serif;
+}
+
+.btn-secondary:hover {
+  background: #306685;
+  color: white;
+}
+
+
 footer nav ul {
   display: flex;
   justify-content: flex-end;
