--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -165,6 +165,21 @@ h2 {
   color: #1d6154;
 }
 
+.log li button.logout {
+    background: none;
+    border: none;
+    color: black;
+    font-family: inherit;
+    font-size: 17px;
+    cursor: pointer;
+    padding: 0;
+    text-decoration: none;
+}
+
+.log li button.logout:hover {
+    color: #b1663c;
+}
+
 nav ul li a {
   text-decoration: none;
   color: black;
