--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -397,6 +397,7 @@ input[type="submit"] {
 /* Style de la modale */
 .modal {
     display: none;
+    overflow: scroll;
     position: fixed;
     z-index: 1000;
     left: 0;
